# WeRead

./: .gitignore  CMakeLists.txt  README.md  lv_conf.h
patches/: sdl_render_clear_fix.patch
src/: main.c
src/api/: api_client.c  api_client.h
src/auth/: auth_controller.c  auth_controller.h
src/ui/: screen_book_detail.c  screen_book_detail.h  screen_discover.c  screen_discover.h  screen_login.c  screen_login.h  screen_manager.c  screen_manager.h  screen_reader.c  screen_reader.h  screen_shelf.c  screen_shelf.h
src/utils/: content_renderer.c  content_renderer.h  crypto.c  crypto.h  html_parser.c  html_parser.h
